docs: 실습 쿼리 수정

--- a/실습-과정-정리.md
+++ b/실습-과정-정리.md
@@ -24,9 +24,38 @@ order by `총수량` desc;
 
 ```sql
 select c.CustomerID as '고객아이디', c.CustomerName as '고객이름', sum(od.Quantity) as '주문량'
-from Orders o, Customers c, OrderDetails od
-where o.CustomerID = c.CustomerID 
-and o.OrderID = od.OrderID
+from Orders o
+       inner join Customers c on o.CustomerID = c.CustomerID
+       inner join OrderDetails od on o.OrderID = od.OrderID
+group by c.CustomerID
+order by `주문량` desc;
+```
+결과로는 89개의 rows가 나온다.
+
+```sql
+select distinct(count(CustomerID)) from Customers;
+```
+위 쿼리를 수행해보면 총 Customer는 91명임을 알 수 있다.
+에어가 남겨준 피드백대로, 주문하지 않은 고객은 결과에서 누락된 것 같다.
+
+```sql
+select count(*) from Orders
+group by CustomerID;
+```
+실제로 위 쿼리를 통해 CustomerID로 Orders를 그룹화해본 결과, 89개의 rows를 리턴하는 것을 알 수 있다.
+
+그래서, Orders와 OrderDetails를 먼저 Join 한 뒤 Quantity 계산을 우선 수행하는 서브쿼리절을 만들어 q라고 칭했다. 그 후, Customers 테이블과
+Customers를 모두 포함하도록 left join을 건 뒤, totalQuantity가 Null인 경우에는 0을 대입하도록 
+수정해주었다.
+
+```sql
+select c.CustomerID as '고객아이디', c.CustomerName as '고객이름', IFNULL(q.totalQuantity, 0) as '주문량'
+from Customers c left join (
+  select o.CustomerID, sum(od.Quantity) as totalQuantity
+  from Orders o
+         inner join OrderDetails od on o.OrderID = od.OrderID
+  group by o.CustomerID) as q
+                           on c.CustomerID = q.CustomerID
 group by c.CustomerID
 order by `주문량` desc;
 ```
@@ -101,7 +130,7 @@ group by c.CustomerID
 order by `지출금액` desc;
 ```
 
-## 5차 시도!!! 성공
+## 5차 시도!!! 성공인줄 알았지만 실패!
 2차 시도에서 sum을 잘못 걸어줬었다. 흐극
 ```sql
 select c.CustomerID as '고객아이디', c.CustomerName as '고객이름', sum(od.Quantity*p.Price) as '지출금액'
@@ -109,6 +138,22 @@ from Orders o, Customers c, Products p, OrderDetails od
 where o.CustomerID = c.CustomerID 
 and o.OrderID = od.OrderID
 and od.ProductID = p.ProductID
+group by c.CustomerID
+order by `지출금액` desc;
+```
+
+## 6차 시도
+위 2번과 마찬가지로 Order 테이블에 존재하지 않는 CustomerID의 경우를 추가로 처리해주었다.
+```sql
+select c.CustomerID as '고객아이디', c.CustomerName as '고객이름', IFNULL(qp.Amount, 0) as '지출금액'
+from Customers c left join
+(
+select o.CustomerID, sum(od.Quantity*p.Price) as Amount
+from OrderDetails od
+inner join Products p on od.ProductID = p.ProductID
+inner join Orders o on od.OrderID = o.OrderID
+group by o.CustomerID
+) as qp on c.CustomerID = qp.CustomerID
 group by c.CustomerID
 order by `지출금액` desc;
 ```
