Update 6.서울대병원에 다닌 30대 환자들을 운동 횟수별로 집계하세요.md

--- a/6.서울대병원에 다닌 30대 환자들을 운동 횟수별로 집계하세요.md
+++ b/6.서울대병원에 다닌 30대 환자들을 운동 횟수별로 집계하세요.md
@@ -5,7 +5,7 @@
 hospital.id
 hosipital.name
 covid.id
-covid.(programmer_id & programmer_id)
+covid.(hospital_id & programmer_id)
 programmer.id
 programmer.hobby
 programmer.member_id
